Add homepage text and styling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,12 @@
 ---
-title: Welcome to Middleman
+title: 2015 Manning Passing Academy
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div id="masthead">
+  <h1>Image slider...</h1>
+</div>
+
+<div id="secondary-header">
+  <h1>2015 MANNING PASSING ACADEMY</h1>
+  <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
+</div>
