--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -1,55 +1,46 @@
 @charset "utf-8";
 
-body {
-  background: #d4d4d4 url("../images/background.png");
+#masthead {
+  position: relative;
+  padding: 80px 0;
+  color: #fff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
-  font-family: sans-serif; }
+  background: -moz-linear-gradient(top,  #ffffff 0%, #5898ff 100%)
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#5898ff));
+  background: -webkit-linear-gradient(top,  #ffffff 0%,#5898ff 100%);
+  background: -o-linear-gradient(top,  #ffffff 0%,#5898ff 100%);
+  background: -ms-linear-gradient(top,  #ffffff 0%,#5898ff 100%);
+  background: linear-gradient(to bottom,  #ffffff 0%,#5898ff 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#5898ff',GradientType=0 );
+  background-repeat: repeat-x;
+}
 
-h1 {
-  color: rgba(0, 0, 0, .3);
+#secondary-header {
+  position: relative;
+  padding: 80px 0;
+  font-family: "bree-serif", sans-serif;
+  color: #fff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  text-align: center;
+  background: -moz-linear-gradient(top,  #002c56 0%, #144eac 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#002c56), color-stop(100%,#144eac));
+  background: -webkit-linear-gradient(top,  #002c56 0%,#144eac 100%);
+  background: -o-linear-gradient(top,  #002c56 0%,#144eac 100%);
+  background: -ms-linear-gradient(top,  #002c56 0%,#144eac 100%);
+  background: linear-gradient(to bottom,  #002c56 0%,#144eac 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002c56', endColorstr='#144eac',GradientType=0 );
+  background-repeat: repeat-x;
+}
+
+#secondary-header h1 {
   font-weight: bold;
-  font-size: 32px;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-  background: url("../images/middleman.png") no-repeat center 100px;
-  padding: 350px 0 10px;
-  margin: 0; }
-
-.doc {
-  font-size: 14px;
-  margin: 0; }
-  .doc:before,
-  .doc:after {
-    opacity: .2;
-    padding: 6px;
-    font-style: normal;
-    position: relative;
-    content: "•"; }
-  .doc a {
-    color: rgba(0, 0, 0, 0.3); }
-    .doc a:hover {
-      color: #666; }
-
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s; }
-
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  50% {
-   -webkit-transform: scale(0);
-   opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.03);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
-  }
+  font-size: 64px;
+  color: #052d59;
+  text-shadow: 0 0 6px #fff;
+  text-shadow:
+    -1px -1px 4px #fff,
+    1px -1px 4px #fff,
+    -1px 1px 4px #fff,
+    1px 1px 4px #fff;
 }
