Add logo to index

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,10 +3,15 @@ title: 2015 Manning Passing Academy
 ---
 
 <div id="masthead">
-  <h1>Image slider...</h1>
+  <div class="container">
+    <h1>Image slider...</h1>
+  </div>
 </div>
 
 <div id="secondary-header">
-  <h1>2015 MANNING PASSING ACADEMY</h1>
-  <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
+  <div class="container">
+    <img src="/images/mpa-logo.png" alt="MPA Logo" class="img-responsive">
+    <h1>2015 MANNING PASSING ACADEMY</h1>
+    <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
+  </div>
 </div>
