Add carousel to index

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,13 +4,39 @@ title: 2015 Manning Passing Academy
 
 <div id="masthead">
   <div class="container">
-    <h1>Image slider...</h1>
+    <div id="mpa-carousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#mpa-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#mpa-carousel" data-slide-to="1"></li>
+        <li data-target="#mpa-carousel" data-slide-to="2"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="/images/carousel-mannings.png" alt="Registration is now open!">
+        </div>
+
+        <div class="item">
+          <img src="/images/carousel-football.png" alt="Free Spalding TF-SB1 Football.">
+        </div>
+
+        <div class="item">
+          <img src="/images/carousel-online-store.png" alt="Online Store Now Open.">
+        </div>
+      </div>
+    </div>
+
+    <a class="left carousel-control" href="#mpa-carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#mpa-carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
   </div>
 </div>
 
 <div id="secondary-header">
   <div class="container">
-    <img src="/images/mpa-logo.png" alt="MPA Logo" class="img-responsive">
     <h1>2015 MANNING PASSING ACADEMY</h1>
     <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
   </div>
