--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
 
+body {
+  font-family: "museo-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 #masthead {
   position: relative;
-  padding: 80px 0;
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -18,8 +21,8 @@
 
 #secondary-header {
   position: relative;
-  padding: 80px 0;
-  font-family: "bree-serif", sans-serif;
+  padding: 40px 0;
+  font-family: "museo-slab", sans-serif;
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -35,7 +38,7 @@
 
 #secondary-header h1 {
   font-weight: bold;
-  font-size: 64px;
+  font-size: 54px;
   color: #052d59;
   text-shadow: 0 0 6px #fff;
   text-shadow:
@@ -43,12 +46,4 @@
     1px -1px 4px #fff,
     -1px 1px 4px #fff,
     1px 1px 4px #fff;
-  margin-top: -55px;
-  z-index: 1;
-}
-
-#secondary-header img {
-  margin-right: auto;
-  margin-left: auto;
-  z-index: 0;
 }
