--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -56,6 +56,12 @@
               <a href="../contact-us">Contact us</a>
             </li>
           </ul>
+
+          <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+          </form>
         </nav>
       </div>
     </header>
