Use tag helper to ensure asset host is used in deployment.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,15 +13,15 @@ title: 2015 Manning Passing Academy
 
       <div class="carousel-inner">
         <div class="item active">
-          <img src="/images/carousel-mannings.png" alt="Registration is now open!">
+          <%= image_tag 'carousel-mannings.png', alt: 'Registration is now open!' %>
         </div>
 
         <div class="item">
-          <img src="/images/carousel-football.png" alt="Free Spalding TF-SB1 Football.">
+          <%= image_tag 'carousel-football.png', alt: 'Free Spalding TF-SB1 Football.' %>
         </div>
 
         <div class="item">
-          <img src="/images/carousel-online-store.png" alt="Online Store Now Open.">
+          <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
         </div>
       </div>
     </div>
