--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -24,47 +24,7 @@
   </head>
   
   <body>
-    <header class="navbar navbar-static-top" id="top" role="banner">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="../" class="navbar-brand">Manning Passing Academy</a>
-        </div>
-        <nav class="collapse navbar-collapse" role="navigtaion">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="../about">About</a>
-            </li>
-            <li>
-              <a href="../sign-up">Sign up</a>
-            </li>
-            <li>
-              <a href="../prepare">Prepare</a>
-            </li>
-            <li>
-              <a href="../the-camp">The Camp</a>
-            </li>
-            <li>
-              <a href="../extras">Extras</a>
-            </li>
-            <li>
-              <a href="../contact-us">Contact us</a>
-            </li>
-          </ul>
-
-          <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-          </form>
-        </nav>
-      </div>
-    </header>
+    <%= partial "nav" %>
 
     <main id="content" role="main">
       <%= yield %>
