Create page directory and sub-layout

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../" class="navbar-brand">Manning Passing Academy</a>
+      <a href="/" class="navbar-brand">Manning Passing Academy</a>
     </div>
     <nav class="collapse navbar-collapse" role="navigtaion">
       <ul class="nav navbar-nav">
@@ -16,15 +16,15 @@
             About <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/purpose/">Purpose</a></li>
-            <li><a href="/history/">History</a></li>
-            <li><a href="/executive-staff/">Executive staff</a></li>
-            <li><a href="/coaching-staff-emeritus/">Coaching staff emeritus</a></li>
-            <li><a href="/testimonials/">Testimonials</a></li>
-            <li><a href="/anniversary-album/">Anniversary album</a></li>
-            <li><a href="/application-registration/">Application/Registration</a></li>
-            <li><a href="/areas-of-instruction/">Areas of instruction</a></li>
-            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/page/purpose/">Purpose</a></li>
+            <li><a href="/page/history/">History</a></li>
+            <li><a href="/page/executive-staff/">Executive staff</a></li>
+            <li><a href="/page/coaching-staff-emeritus/">Coaching staff emeritus</a></li>
+            <li><a href="/page/testimonials/">Testimonials</a></li>
+            <li><a href="/page/anniversary-album/">Anniversary album</a></li>
+            <li><a href="/page/application-registration/">Application/Registration</a></li>
+            <li><a href="/page/areas-of-instruction/">Areas of instruction</a></li>
+            <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
         <li>
@@ -32,18 +32,18 @@
             Sign up<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/important-dates/">Important dates</a></li>
-            <li><a href="/eligibility/">Eligibility</a></li>
-            <li><a href="/tuition/">Tuition</a></li>
-            <li><a href="/day-campers/">Day campers</a></li>
-            <li><a href="/balance-due/">Balance due</a></li>
-            <li><a href="/refund-policy/">Refund policy</a></li>
-            <li><a href="/application-registration/">Application/Registration</a></li>
-            <li><a href="/equipment/">Equipment</a></li>
-            <li><a href="/medical-information/">Medical information</a></li>
-            <li><a href="/local-accommodations/">Local accommodations</a></li>
-            <li><a href="/airport-shuttle/">Airport shuttle</a></li>
-            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/page/important-dates/">Important dates</a></li>
+            <li><a href="/page/eligibility/">Eligibility</a></li>
+            <li><a href="/page/tuition/">Tuition</a></li>
+            <li><a href="/page/day-campers/">Day campers</a></li>
+            <li><a href="/page/balance-due/">Balance due</a></li>
+            <li><a href="/page/refund-policy/">Refund policy</a></li>
+            <li><a href="/page/application-registration/">Application/Registration</a></li>
+            <li><a href="/page/equipment/">Equipment</a></li>
+            <li><a href="/page/medical-information/">Medical information</a></li>
+            <li><a href="/page/local-accommodations/">Local accommodations</a></li>
+            <li><a href="/page/airport-shuttle/">Airport shuttle</a></li>
+            <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
         <li>
@@ -51,10 +51,10 @@
             Prepare <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/preparing-for-camp/">Preparing for camp</a></li>
-            <li><a href="/equipment/">Equipment</a></li>
-            <li><a href="/directions/">Directions</a></li>
-            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/page/preparing-for-camp/">Preparing for camp</a></li>
+            <li><a href="/page/equipment/">Equipment</a></li>
+            <li><a href="/page/directions/">Directions</a></li>
+            <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
         <li>
@@ -62,21 +62,21 @@
             The Camp <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/airport-shuttle/">Airport shuttle</a></li>
-            <li><a href="/daily-schedule/">Daily schedule</a></li>
-            <li><a href="/check-in-process/">Check-in process</a></li>
-            <li><a href="/areas-of-instruction/">Areas of instruction</a></li>
-            <li><a href="/campus-map/">Campus map</a></li>
-            <li><a href="/day-campers/">Day campers</a></li>
-            <li><a href="/equipment/">Equipment</a></li>
-            <li><a href="/evening-speakers/">Evening speakers</a></li>
-            <li><a href="/facilities/">Facilities</a></li>
-            <li><a href="/medical-information/">Medical information</a></li>
-            <li><a href="/passing-league/">Passing league</a></li>
-            <li><a href="/room-and-board/">Room &amp; board</a></li>
-            <li><a href="/roommates/">Roommates</a></li>
-            <li><a href="/teams/">Teams</a></li>
-            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/page/airport-shuttle/">Airport shuttle</a></li>
+            <li><a href="/page/daily-schedule/">Daily schedule</a></li>
+            <li><a href="/page/check-in-process/">Check-in process</a></li>
+            <li><a href="/page/areas-of-instruction/">Areas of instruction</a></li>
+            <li><a href="/page/campus-map/">Campus map</a></li>
+            <li><a href="/page/day-campers/">Day campers</a></li>
+            <li><a href="/page/equipment/">Equipment</a></li>
+            <li><a href="/page/evening-speakers/">Evening speakers</a></li>
+            <li><a href="/page/facilities/">Facilities</a></li>
+            <li><a href="/page/medical-information/">Medical information</a></li>
+            <li><a href="/page/passing-league/">Passing league</a></li>
+            <li><a href="/page/room-and-board/">Room &amp; board</a></li>
+            <li><a href="/page/roommates/">Roommates</a></li>
+            <li><a href="/page/teams/">Teams</a></li>
+            <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
         <li>
@@ -84,16 +84,16 @@
             Extras <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/sponsors/">Sponsors</a></li>
-            <li><a href="/speed-seminar/">Speed seminar</a></li>
-            <li><a href="/sunday-chapel-and-mass/">Sunday chapel &amp; mass</a></li>
-            <li><a href="/camp-photos/">Camp photos</a></li>
-            <li><a href="/online-store/">Offical MPA store</a></li>
-            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/page/sponsors/">Sponsors</a></li>
+            <li><a href="/page/speed-seminar/">Speed seminar</a></li>
+            <li><a href="/page/sunday-chapel-and-mass/">Sunday chapel &amp; mass</a></li>
+            <li><a href="/page/camp-photos/">Camp photos</a></li>
+            <li><a href="/page/online-store/">Offical MPA store</a></li>
+            <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
         <li>
-          <a href="/contact-us/">Contact us</a>
+          <a href="/page/contact-us/">Contact us</a>
         </li>
       </ul>
 
