--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -89,6 +89,7 @@
             <li><a href="/page/sunday-chapel-and-mass/">Sunday chapel &amp; mass</a></li>
             <li><a href="/page/camp-photos/">Camp photos</a></li>
             <li><a href="/page/online-store/">Offical MPA store</a></li>
+            <li><a href="/page/media-only/">Media only</a></li>
             <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
