Clean up executive staff links and images

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -4,6 +4,10 @@ body {
   font-family: "museo-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.pull-left {
+  margin-right: 12px;
+}
+
 #masthead {
   position: relative;
   color: #fff;
