--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,6 +30,8 @@
       <%= yield %>
     </main>
 
+    <%= partial "footer" %>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//use.typekit.net/jet0pah.js"></script>
