Add responsive image classes

--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -24,4 +24,4 @@ and therefore refunded a total of <%= number_to_currency(overnight_tuition - day
 
 Sorry, there are no team or group rates.
 
-![Tuition](/images/tuition.jpg)
+<img src="/images/tuition.jpg" class="img-responsive img-thumbnail">
