--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -1,10 +1,11 @@
 Registration / Application
 ==========================
 
-* [Online Registration](https://campregistrationsystems.com/manning-passing-academy)  
+* [Online Registration](<%= online_registration_link %>)  
 *Campers who register online receive a free Spalding TF-SB1 football, a $100
 value*  
 *$15 non-refundable online registration fee applies*
 * [Printable Application](/documents/application.pdf)
+* [Camper Confirmation](<%= confirmation_link %>)
 
 <img src="/images/application-registration.jpg" class="img-responsive img-thumbnail">
