Add more description elements on home page.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,3 +47,34 @@ title: 2015 Manning Passing Academy
     <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
   </div>
 </div>
+
+<div id="home-description" class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <h4>20th Anniversary</h4>
+      <%= image_tag 'home-description-cooper-archie.png' %>
+      <p>
+        For 20 years, the Manning Passing Academy has been helping players
+        fully realize their potential on and off of the football field.
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h4>The Premier Camp in the Country</h4>
+      <%= image_tag 'home-description-peyton.png' %>
+      <p>
+        Whether you're a QB, RB, WR, or TE, the Manning Passing Academy will
+        help you grasp the fundamentals of your position, and basic offensive
+        and defensive strategies.
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h4>Learn From the Best</h4>
+      <%= image_tag 'home-description-eli.png' %>
+      <p>
+        We've gathered some of the most successful and brightest coaches and
+        players from the professional, college, and high school ranks to help
+        all campers learn from the best.
+      </p>
+    </div>
+  </div>
+</div>
