--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -45,6 +45,8 @@ title: 2015 Manning Passing Academy
   <div class="container">
     <h1>2015 MANNING PASSING ACADEMY</h1>
     <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
+    <%= link_to 'Sign Up Now!', online_registration_link,
+      class: 'btn btn-lg btn-danger' %>
   </div>
 </div>
 
