Use image_tags to take advantage of Cloudfront.

--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -1,8 +1,10 @@
 Executive Staff
 ===============
 
-<div class="pull-left"> <img src="/images/executive-staff-archie.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-archie.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Archie Manning - Executive Director
 -----------------------------------
@@ -57,8 +59,10 @@ the proud grandparents of seven grandchildren by Cooper, Peyton and Eli.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-cooper.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-cooper.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Cooper Manning - Senior Associate Director
 ------------------------------------------
@@ -90,8 +94,10 @@ plans of losing that title.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-peyton.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-peyton.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Peyton Manning - Senior Associate Director
 ------------------------------------------
@@ -161,8 +167,10 @@ of twins, Mosley and Marshal.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-eli.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-eli.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Eli Manning - Senior Associate Director
 ---------------------------------------
@@ -225,8 +233,10 @@ daughters Ava and Lucy.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-buddy.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-buddy.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Buddy Teevens - Associate Director
 ----------------------------------
@@ -251,8 +261,10 @@ children, Lindsay, and Eugene IV.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-hawk.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-hawk.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Jeff "Hawk" Hawkins - Associate Director
 ----------------------------------------
@@ -277,8 +289,10 @@ Amy reside in Eugene, Oregon with their daughter Gabrielle.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-kyle.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-kyle.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Kyle Wiest - Assistant Director
 -------------------------------
@@ -306,8 +320,10 @@ the University of Oregon athletic department.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-greg.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-greg.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Greg Blackwell - Director of Public Relations
 ---------------------------------------------
@@ -326,8 +342,10 @@ He and his wife Lydia reside in Fort Worth, Texas with their son Christian.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-andy.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-andy.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Andy Solari - Director of Communications
 ----------------------------------------
@@ -347,8 +365,10 @@ their three children: Jessica, Emily, and Tony.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-ed.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-ed.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Ed Nishioka - Director of Marketing and Promotions
 --------------------------------------------------
@@ -381,8 +401,10 @@ University of Nevada Las Vegas.
 
 <div class="clearfix"></div> <hr />
 
-<div class="pull-left"> <img src="/images/executive-staff-jimmy.jpg"
-class="img-responsive img-thumbnail"> </div>
+<div class="pull-left">
+  <%= image_tag 'executive-staff-jimmy.jpg',
+    class: 'img-responsive, img-thumbnail' %>
+</div>
 
 Jim Marinelli - Director of Operations
 --------------------------------------
@@ -407,8 +429,8 @@ in Boston, MA.
 <div class="clearfix"></div> <hr />
 
 <div class="pull-left">
-  <img src="/images/executive-staff-parker.jpg"
-    class="img-responsive img-thumbnail">
+  <%= image_tag 'executive-staff-parker.jpg',
+    class: 'img-responsive, img-thumbnail' %>
 </div>
 
 Parker Waters - Director of Photographry
