--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -53,6 +53,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/page/preparing-for-camp/">Preparing for camp</a></li>
             <li><a href="/page/equipment/">Equipment</a></li>
+            <li><a href="/page/nutrition/">Nutrition</a></li>
             <li><a href="/page/directions/">Directions</a></li>
             <li><a href="/page/faq/">FAQ</a></li>
           </ul>
