Use image_tags to take advantage of cloudfront

--- a/source/page/airport-shuttle.html.md.erb
+++ b/source/page/airport-shuttle.html.md.erb
@@ -39,4 +39,4 @@ at:
 [New Orleans Aiport](http://www.flymsy.com/)  
 *(504) 464-2661*
 
-<img src="/images/airport-shuttle.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'airport-shuttle.jpg', class: 'img-responsive img-thumbnail' %>
