--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -8,4 +8,4 @@ value*
 * [Printable Application](/documents/application.pdf)
 * [Camper Confirmation](<%= confirmation_link %>)
 
-<img src="/images/application-registration.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
