--- a/source/page/areas-of-instruction.html.md.erb
+++ b/source/page/areas-of-instruction.html.md.erb
@@ -24,4 +24,4 @@ Offense is that it provides you the opportunity to potentially
 utilize all of your playmakers on every play. And as always, it’s
 all about tempo.
 
-<img src="/images/areas-of-instruction.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'areas-of-instruction.jpg', class: 'img-responsive img-thumbnail' %>
