--- a/source/page/coaching-staff-emeritus.html.md.erb
+++ b/source/page/coaching-staff-emeritus.html.md.erb
@@ -29,4 +29,4 @@ profession, we cannot give a full list of the coaching staff until late
 June. Rest assured that, as always, they will all be of the highest quality
 coaches available.*
 
-<img src="/images/coaching-staff.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'coaching-staff.jpg', class: 'img-responsive img-thumbnail' %>
