--- a/source/page/contact-us.html.md.erb
+++ b/source/page/contact-us.html.md.erb
@@ -13,4 +13,4 @@ Manning Passing Academy
 PO Box 10161  
 Eugene, OR 97440
 
-<img src="/images/contact-us.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'contact-us.jpg', class: 'img-responsive img-thumbnail' %>
