--- a/source/page/daily-schedule.html.md.erb
+++ b/source/page/daily-schedule.html.md.erb
@@ -3,4 +3,4 @@ Daily Schedule
 
 * [Printable Daily Schedule](/documents/daily-schedule.pdf)
 
-<img src="/images/daily-schedule.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'daily-schedule.jpg', class: 'img-responsive img-thumbnail' %>
