--- a/source/page/equipment.html.md.erb
+++ b/source/page/equipment.html.md.erb
@@ -1,7 +1,7 @@
 Equipment
 =========
 
-<img src="/images/equipment.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'equipment.jpg', class: 'img-responsive img-thumbnail' %>
 
 This is a NON-CONTACT football camp and therefore there are NO equipment
 requirements… but there are minimal needs. Grass cleats are preferable
