--- a/source/page/evening-speakers.html.md.erb
+++ b/source/page/evening-speakers.html.md.erb
@@ -30,4 +30,4 @@ All evening speaker sessions are provided to the campers only.
 Absolutely no parents or adults allowed!
 ----------------------------------------
 
-<img src="/images/evening-speakers.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'evening-speakers.jpg', class: 'img-responsive img-thumbnail' %>
