--- a/source/page/facilities.html.md.erb
+++ b/source/page/facilities.html.md.erb
@@ -8,4 +8,4 @@ and everything is first-class.
 
 Maps of the Nicholls State campus can be found [here](/page/campus-map).
 
-<img src="/images/facilities.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'facilities.jpg', class: 'img-responsive img-thumbnail' %>
