--- a/source/page/important-dates.html.md.erb
+++ b/source/page/important-dates.html.md.erb
@@ -14,4 +14,4 @@ fee thereafter)
 
 **Refunds Processed** - August 1, 2015
 
-<img src="/images/important-dates.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'important-dates.jpg', class: 'img-responsive img-thumbnail' %>
