--- a/source/page/medical-information.html.md.erb
+++ b/source/page/medical-information.html.md.erb
@@ -16,4 +16,4 @@ of all of our campers. The university’s state-of-the-art training
 facilities are available to treat all minor injuries and illnesses.
 Local hospitals can treat any emergency.
 
-<img src="/images/medical-information.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'medical-information.jpg', class: 'img-responsive img-thumbnail' %>
