--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -37,4 +37,4 @@ Preparing for Camp
   be sure to communicate them with our camp administration so that they
   can direct you properly.
 
-<img src="/images/preparing-for-camp.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'preparing-for-camp.jpg', class: 'img-responsive img-thumbnail' %>
