--- a/source/page/purpose.html.md.erb
+++ b/source/page/purpose.html.md.erb
@@ -14,4 +14,4 @@ family-owned and managed football camp that embraces the basic
 fundamentals of football while catering to the offensive skill positions
 of RB, TE, WR...and of course QB.
 
-<img src="/images/purpose.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'purpose.jpg', class: 'img-responsive img-thumbnail' %>
