--- a/source/page/refund-policy.html.md.erb
+++ b/source/page/refund-policy.html.md.erb
@@ -30,4 +30,4 @@ a written request has been submitted.
 For campers who register online, a $15 non-refundable registration fee is added.
 This fee goes to a third party who helps the MPA accept payments online.
 
-<img src="/images/refund-policy.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'refund-policy.jpg', class: 'img-responsive img-thumbnail' %>
