--- a/source/page/roommates.html.md.erb
+++ b/source/page/roommates.html.md.erb
@@ -13,4 +13,4 @@ has 4 law enforcement officers on staff 24 hours a day.
 
 There are **NO EXCEPTIONS**
 
-<img src="/images/roommates.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'roommates.jpg', class: 'img-responsive img-thumbnail' %>
