--- a/source/page/speed-seminar.html.md.erb
+++ b/source/page/speed-seminar.html.md.erb
@@ -13,4 +13,4 @@ the industry. The MPA philosophy towards performance enhancement is...
 how."* This seminar is offered as a complimentary addition to your MPA
 experience.
 
-<img src="/images/speed-seminar.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'speed-seminar.jpg', class: 'img-responsive img-thumbnail' %>
