--- a/source/page/teams.html.md.erb
+++ b/source/page/teams.html.md.erb
@@ -14,4 +14,4 @@ camper will NOT be allowed to move up. However, if a camper feels that
 they should be in a lower level, due to ability, experience, or because
 younger teammates are in attendance, we will allow it.*
 
-<img src="/images/teams.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'teams.jpg', class: 'img-responsive img-thumbnail' %>
