--- a/source/page/balance-due.html.md.erb
+++ b/source/page/balance-due.html.md.erb
@@ -5,4 +5,4 @@ Balance Due
 *Only available if you registered online*
 * [Printable balance-due form](/documents/balance-due.pdf)
 
-<img src="/images/balance-due.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'balance-due.jpg', class: 'img-responsive img-thumbnail' %>
