--- a/source/page/campus-map.html.md.erb
+++ b/source/page/campus-map.html.md.erb
@@ -7,4 +7,4 @@ find your way around campus.
 
 [Printable Campus Map](/documents/campus-map.pdf)
 
-<img src="/images/campus-map.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'campus-map.jpg', class: 'img-responsive img-thumbnail' %>
