--- a/source/page/day-campers.html.md.erb
+++ b/source/page/day-campers.html.md.erb
@@ -14,4 +14,4 @@ exceptions:
 * Day campers are welcome to stay throughout the evening activities
   right up until they are done (approximately 10:00pm).
 
-<img src="/images/day-campers.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'day-campers.jpg', class: 'img-responsive img-thumbnail' %>
