--- a/source/page/eligibility.html.md.erb
+++ b/source/page/eligibility.html.md.erb
@@ -16,4 +16,4 @@ However, if a camper feels that they should be in a lower level, due to
 ability, or because younger teammates are in attendance, we will allow
 it.*
 
-<img src="/images/eligibility.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'eligibility.jpg', class: 'img-responsive img-thumbnail' %>
