--- a/source/page/history.html.md.erb
+++ b/source/page/history.html.md.erb
@@ -25,4 +25,4 @@ although the Manning name has been practically synonymous with the
 quarterback position for almost four decades… the MPA is not just for
 QBs.
 
-<img src="/images/history.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'history.jpg', class: 'img-responsive img-thumbnail' %>
