--- a/source/page/local-accommodations.html.md.erb
+++ b/source/page/local-accommodations.html.md.erb
@@ -16,4 +16,4 @@ We do welcome all spectators during the practice sessions, but for legal
 and safety reasons, we ask that you refrain from entering the dining,
 common, and sleeping areas.
 
-<img src="/images/local-accommodations.jpg" class="img-responsive img-thumbnail">
+<%= image_tag 'local-accommodations.jpg', class: 'img-responsive img-thumbnail' %>
