Fix sponsor link

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -9,7 +9,7 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="//www.spalding.com/football/index.php">
+      <a href="//www.bankplus.net/">
         <%= image_tag 'sponsors-bank-plus.gif', class: 'img-responsive' %>
       </a>
     </td>
