--- a/source/page/evening-speakers.html.md.erb
+++ b/source/page/evening-speakers.html.md.erb
@@ -1,33 +1,79 @@
 Evening Speakers
 ================
 
-College Coaches Forum - Character Building
-------------------------------------------
+The Manning Passing Academy conducts evening speaker sessions that are headlined
+by professionals who will teach our campers that life is more than just the
+fundamentals they need to know on the football field. We provide sessions on
+character building, academics and the myriad issues surrounding their health in
+the demanding sport of football. It is important to us that high school
+athletes know that a college degree will get them further in life than just
+football by itself. But they can use football to help them achieve goals that
+might otherwise not exist. Throughout the camp we hope to instill habits,
+discipline and structure that our campers can use throughout their life
+regardless of when their football careers end. The camp's highly-structured
+daily schedule and regimen is always topped off with our evening speaker
+sessions that are intended to impart the importance of education and teamwork
+and convey that the most successful athlete should also embrace an even balance
+of physical, mental, spiritual and emotional well-being.
 
-This must-see forum is presented by current college coaches who attend
-the camp from every level of college football (3, 2, 1AA, and 1A).
-Coaches will discuss all factors in character building at every level of
-college football.
+<%= image_tag 'evening-speakers.jpg', class: 'img-responsive img-thumbnail' %>
 
-Pro Players Forum
------------------
-
-Our professional players and coaches will make a presentation to the
-high school student-athletes in an effort to allow them to understand
-the benefits received and the sacrifices needed to make it to the pro
-level.
-
-College Players Forum
+Pro Player Roundtable
 ---------------------
 
-Everything you wanted to know about college but were afraid to ask. This
-evening activity is designed to provide an interactive forum with high
-profile college players from every division and numerous conferences
-answering questions provided by high school student-athletes.
+This must see forum is presented by our in-residence NFL players and coaches who
+will provide a unique insight what benefits can received and what sacrifices
+must be made to make it to the professional level. And also the harsh reality
+of how few actually make it to that level which truly reveals how important a
+college degree is.
 
-All evening speaker sessions are provided to the campers only.
+Cooper's College Colloquium
+---------------------------
+
+Everything you wanted to know about college football but were afraid to ask. The
+Colloquium has traditionally been the camper's favorite seminar. Eldest son
+Cooper Manning emcees a panel of accomplished college football players and
+conducts an interactive question and answer session between the high school
+athletes and the collegians.
+
+NCAA Initial Eligibility Seminar
+--------------------------------
+
+Staff members from the NCAA conduct seminars geared towards educating high
+school football players who intend to continue participating as players in the
+college ranks. They share the core courses they must take and the resources that
+the NCAA makes available to assist them in achieving that goal.
+
+Thibodaux Regional Medical Center Forum
+---------------------------------------
+
+The TRMC will provide highly qualified medical personnel who will instruct our
+campers on the potential injuries that exist in the game of football and what to
+look for. Everything from concussions, shoulder injuries, bacterial infections,
+and more will be covered during this session. The TRMC also provides the
+certified trainers that tend to our campers on a daily basis and is located
+adjacent to our practice fields.
+
+Gatorade Nutritional Session
+----------------------------
+
+The MPA's longest standing partner wants to ensure that our campers are fully
+prepared for the rigors of camp and the upcoming football season. Towards that
+end their professional staff will discuss sports nutrition myths and facts and
+also the foods and fluids that are important to help fuel your body and help you
+stay healthy and allow you the opportunity for the greatest success.
+
+Manning Passing Academy Highlight Film
+--------------------------------------
+
+At the conclusion of camp we will show a professionally made video that contains
+candid shots and out-takes of all the activities that went on during the 4 day
+camp. Starting with check-in we capture all the training and fun-filled moments
+that our campers delight in seeing. Every camper will take home a DVD copy of
+the video which they will get when they turn in their room key as they check-out
+of the residence halls.
 
 Absolutely no parents or adults allowed!
 ----------------------------------------
 
-<%= image_tag 'evening-speakers.jpg', class: 'img-responsive img-thumbnail' %>
+All evening speaker sessions are provided to the campers only.
