Remove responsive class that sets height: auto

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -56,7 +56,7 @@
             <li>
               <a href="/page/nutrition/">
                 Nutrition
-                <img src="/images/sponsors-gatorade.gif" class="img-responsive" height="15">
+                <img src="/images/sponsors-gatorade.gif" height="15">
               </a>
             </li>
             <li><a href="/page/directions/">Directions</a></li>
