Fix typo for Parker

--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -433,7 +433,7 @@ in Boston, MA.
     class: 'img-responsive, img-thumbnail' %>
 </div>
 
-Parker Waters - Director of Photographry
+Parker Waters - Director of Photography
 ----------------------------------------
 
 Parker is entering his sixth year with Manning Passing Academy as the camp
