New carousel image

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,7 @@ title: 2015 Manning Passing Academy
       <div class="carousel-inner">
         <div class="item active">
           <% link_to online_registration_link do %>
-            <%= image_tag 'carousel-mannings.png', alt: 'Registration is now open!' %>
+            <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
           <% end %>
         </div>
 
