--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -104,7 +104,7 @@
         </li>
       </ul>
 
-      <form class="navbar-form navbar-right" role="search">
+      <form class="navbar-form navbar-right" id="swift-type-search" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
