Assign id to the input, not form

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -104,9 +104,9 @@
         </li>
       </ul>
 
-      <form class="navbar-form navbar-right" id="swift-type-search" role="search">
+      <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search" id="swift-type-search">
         </div>
       </form>
     </nav>
