Add page titles

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <meta name="keywors" content="Manning Passing Academy, MPA, Peyton Manning football camp, Eli Manning football camp">
     <meta name="author" content="Kyle Wiest">
     
-    <title><%= current_page.data.title || "Manning Passing Academy" %></title>
+    <title><%= "Manning Passing Academy: #{current_page.data.title}" %></title>
     
     <!-- Twitter Bootstrap -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
