--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -16,7 +16,7 @@ Preparing for Camp
   and any other toiletries you need. Go to [room and board](/page/room-and-board).
 * You do NOT need football equipment but we recommend a mouth piece
   for all campers. Grass-cleated shoes are highly recommended to
-  tennis shoes but you should bring both in case in climate weather
+  tennis shoes but you should bring both in case of inclimate weather
   forces us inside. See [equipment](/page/equipment).
 * We recommend that you do NOT bring anything of value (jewelry,
   radios, substantial amounts of cash, TVs, etc.). We cannot vouch on
