Close overnight campers

--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -5,7 +5,8 @@ title: "Tuition"
 Tuition
 =======
 
-* **Overnight camper:** <%= number_to_currency overnight_tuition %> per camper
+* <strike>**Overnight camper:** <%= number_to_currency overnight_tuition %> per camper</strike>  
+_(sold out)_
 * **Day camper:** <%= number_to_currency day_tuition %> per camper
 
 *A $100 **non-refundable** deposit must accompany all applications.*
