Add Nike and Gatorade logos to home page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,6 +29,12 @@ title: "Official Home Page"
         -->
 
         <div class="item active">
+          <% link_to '/page/purpose/' do %>
+            <%= image_tag 'carousel-2015-camp.png', alt: '2015 MPA' %>
+          <% end %>
+        </div>
+
+        <div class="item">
           <% link_to '/page/online-store/' do %>
             <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
           <% end %>
