Add Nike to sponsors page

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -13,6 +13,11 @@ Sponsors
       </a>
     </td>
     <td>
+      <a href="http://www.nike.com/us/en_us/">
+        <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
+      </a>
+    </td>
+    <td>
       <a href="//www.bankplus.net/">
         <%= image_tag 'sponsors-bank-plus.gif', class: 'img-responsive' %>
       </a>
@@ -22,13 +27,13 @@ Sponsors
         <%= image_tag 'sponsors-spalding.gif', class: 'img-responsive' %>
       </a>
     </td>
+  </tr>
+  <tr>
     <td>
       <a href="//www.mcdonalds.com/">
         <%= image_tag 'sponsors-mcdonalds.gif', class: 'img-responsive' %>
       </a>
     </td>
-  </tr>
-  <tr>
     <td>
       <a href="//d1sportstraining.com/">
         <%= image_tag 'sponsors-d1.gif', class: 'img-responsive' %>
@@ -44,13 +49,13 @@ Sponsors
         <%= image_tag 'sponsors-kraft.gif', class: 'img-responsive' %>
       </a>
     </td>
+  </tr>
+  <tr>
     <td>
       <a href="//www.libertymutual.com/">
         <%= image_tag 'sponsors-liberty-mutual.png', class: 'img-responsive' %>
       </a>
     </td>
-  </tr>
-  <tr>
     <td>
       <a href="//www1.hilton.com/en_US/hi/hotel/MSYAHHH/index.do">
         <%= image_tag 'sponsors-hilton.jpg', class: 'img-responsive' %>
@@ -66,13 +71,13 @@ Sponsors
         <%= image_tag 'sponsors-att.gif', class: 'img-responsive' %>
       </a>
     </td>
+  </tr>
+  <tr>
     <td>
       <a href="//sportsperformance.stvincent.org/">
         <%= image_tag 'sponsors-stvincents.gif', class: 'img-responsive' %>
       </a>
     </td>
-  </tr>
-  <tr>
     <td>
       <a href="//papajohns.com/">
         <%= image_tag 'sponsors-papajohns.jpg', class: 'img-responsive' %>
