--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,7 +30,7 @@ title: "Official Home Page"
 
         <div class="item active">
           <% link_to '/page/purpose/' do %>
-            <%= image_tag 'carousel-2015-camp.png', alt: '2015 MPA' %>
+            <%= image_tag 'carousel-2015-mpa.png', alt: '2015 MPA' %>
           <% end %>
         </div>
 
