Replace DirecTV logo with larger .png

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -58,7 +58,7 @@ Sponsors
     </td>
     <td>
       <a href="//directv.com/">
-        <%= image_tag 'sponsors-directv.gif', class: 'img-responsive' %>
+        <%= image_tag 'sponsors-directv.png', class: 'img-responsive' %>
       </a>
     </td>
     <td>
